# RWKV-MLX

./: .gitignore  README.md  pyproject.toml
rwkv_mlx/: __init__.py  chat.py  convert.py  finetune_moe.py  generate.py  model.py  moe.py  tokenizer.py  train.py
rwkv_mlx/kernels/: __init__.py  wkv7_metal.py
scripts/: data_preprocess.py  download_chat_datasets.py  download_tinystories.py  rank_dataset.py
