[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwkv-mlx"
version = "0.1.0"
description = "RWKV-v7 language model reimplemented for Apple Silicon using MLX"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "torch>=2.0",  # for weight conversion only
]

[project.scripts]
rwkv-mlx-train = "rwkv_mlx.train:main"
rwkv-mlx-generate = "rwkv_mlx.generate:main"
rwkv-mlx-convert = "rwkv_mlx.convert:main"

[tool.setuptools.packages.find]
include = ["rwkv_mlx*"]
